--- a/package.json
+++ b/package.json
@@ -2,8 +2,14 @@
   "name": "hono-better-auth-cf",
   "type": "module",
   "scripts": {
+    "start": "wrangler dev",
     "dev": "wrangler dev",
     "deploy": "wrangler deploy --minify",
+    "db:generate": "drizzle-kit generate",
+    "db:migrate:local": "wrangler d1 migrations apply hono_better_auth_cf --local",
+    "db:migrate:prod": "wrangler d1 migrations apply hono_better_auth_cf --remote",
+    "db:check": "drizzle-kit check",
+    "db:studio": "drizzle-kit studio",
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
@@ -15,4 +21,5 @@
     "drizzle-kit": "^0.31.4",
     "wrangler": "^4.33.1"
   }
+  
 }
