Add database support with D1 integration and define user schema
- Introduced a new database module in `src/db/db.ts` to initialize the D1 database using drizzle-orm.
- Created a user schema in `src/db/schema.ts` with fields for id, name, age, and email.
- Updated `package.json` to include necessary dependencies for database operations.

--- a/package.json
+++ b/package.json
@@ -18,8 +18,9 @@
     "hono": "^4.9.5"
   },
   "devDependencies": {
+    "@cloudflare/workers-types": "^4.20250830.0",
     "drizzle-kit": "^0.31.4",
+    "tsx": "^4.20.5",
     "wrangler": "^4.33.1"
   }
-  
 }
