--- a/wrangler.jsonc
+++ b/wrangler.jsonc
@@ -2,7 +2,10 @@
 	"$schema": "node_modules/wrangler/config-schema.json",
 	"name": "hono-better-auth-cf",
 	"main": "src/index.ts",
-	"compatibility_date": "2025-08-30",
+	"compatibility_date": "2024-09-26",
+    "compatibility_flags": [
+        "nodejs_compat"
+    ],
 	"d1_databases": [
 		{
 			"binding": "hono_better_auth_cf",
