--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "better-auth": "^1.3.7",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
-    "hono": "^4.9.5"
+    "hono": "^4.9.5",
+    "zod": "^4.1.5"
   },
   "devDependencies": {
     "@cloudflare/workers-types": "^4.20250830.0",
+    "@types/node": "^24.3.0",
     "drizzle-kit": "^0.31.4",
     "tsx": "^4.20.5",
     "wrangler": "^4.33.1"
