Enhance email functionality and update database schema
- Added email configuration options to .env.example for SMTP settings.
- Introduced email sending functionality in `lib/email.ts` to handle email verification.
- Updated database schema in `schema.ts` to include a new `todos` table with necessary fields and relationships.
- Refactored database initialization in `db.ts` to support the new schema.
- Created new database queries in `queries.ts` for inserting and retrieving todos.
- Adjusted drizzle configuration to reflect migration directory changes.

--- a/.env.example
+++ b/.env.example
@@ -6,3 +6,11 @@ CLOUDFLARE_D1_TOKEN=""
 # npx @better-auth/cli@latest secret
 BETTER_AUTH_SECRET=""
 BETTER_AUTH_URL="http://localhost:8787"
+
+# useplunk Mail
+EMAIL_FROM="hello@example.com"
+SMTP_HOST="smtp.useplunk.com"
+SMTP_PORT="587"
+SMTP_SECURE="false"
+SMTP_USER="plunk"
+SMTP_PASSWORD="your-secret-api-key"
