--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "cf-typegen": "wrangler types --env-interface CloudflareBindings"
   },
   "dependencies": {
+    "@hono/zod-validator": "^0.7.2",
     "better-auth": "^1.3.7",
     "dotenv": "^17.2.1",
     "drizzle-orm": "^0.44.5",
